--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ title: Selected Pieces from Fynn Edmund Wadsworth
 tagline: Illustrator | Writer | Comic Artist
 # description appears in meta tags and other locations
 # this description might appear in search result lists, keep around 160 characters max
-description: A collection of works created by Fynn Edmund Wadsworth, aka Suiteheartts, representing both his 3d and 2d artistic endeavors.
+description: A collection of works created by Fynn Wadsworth, an artist from Iowa who currently operates under the online moniker of Suiteheartts in many of his online postings. His work often focuses on both traditional and digital art forms; Therefore, this collection combines representations of both his 3d and 2d artistic endeavors.
 # creator of the digital collection, to appear in meta tags; we typically use our GitHub usernames but feel free to just use your name
 author: G. Digmann-Pearson
 
