--- a/_data/theme.yml
+++ b/_data/theme.yml
@@ -12,7 +12,7 @@ featured-image: https://suiteheartts.carrd.co/assets/images/image02.png?v=6fda95
 # optional: add extra padding around collection title for a larger image feature. 
 home-title-y-padding: 5em # Default is 8em
 # optional: change position of background image, center, top, bottom
-home-banner-image-position: bottom
+home-banner-image-position: center
 
 ##########
 # ITEM PAGE
